i added my email

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <p class=" capitalize text-[28px] sm:text-5xl  tracking-[-0.56px] sm:tracking-[-0.96px] leading-8 sm:leading-[56px] font-extrabold sm:text-center">Let’s <span class="text-modi">Talk</span> For Something Special </p>
                         <p class="text-[#71717A] text-[16px] tracking-[-0.32px] sm:mb-[40px] sm:text-center">I seek to push the limits of creativity to create high-engaging, user-friendly, and memorable interactive experiences.</p>
                     </div>
-                    <p class="text-[20px] capitalize tracking-[-0.4px] font-bold sm:text-[28px] sm:tracking-[-0.56px] sm:font-semibold sm:text-center">youremail@gmail.com</p>
+                    <p class="text-[20px] capitalize tracking-[-0.4px] font-bold sm:text-[28px] sm:tracking-[-0.56px] sm:font-semibold sm:text-center">mhamed.ouzed@edu.uiz.ac.ma</p>
                     <p class="text-[20px] capitalize tracking-[-0.4px] font-bold sm:text-[28px] sm:tracking-[-0.56px] sm:font-semibold sm:text-center">+212619213368</p>
                     
 
